Etapa2-1210620-1210578/SemicolonTerminal/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkComments
    TkPunto
    TkUminus

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     block -> TkOBlock sequencing TkCBlock
Rule 3     block -> TkOBlock TkDeclare declare_var sequencing TkCBlock
Rule 4     declare_var -> variables TkTwoPoints type TkSemicolon declare_var
Rule 5     declare_var -> variables TkTwoPoints type
Rule 6     variables -> TkId TkComma variables
Rule 7     variables -> TkId
Rule 8     array -> TkArray TkOBracket expression TkSoForth expression TkCBracket
Rule 9     op_array -> TkAtoi TkOpenPar TkId TkClosePar
Rule 10    op_array -> TkSize TkOpenPar TkId TkClosePar
Rule 11    op_array -> TkMin TkOpenPar TkId TkClosePar
Rule 12    op_array -> TkMax TkOpenPar TkId TkClosePar
Rule 13    op_array -> TkAtoi TkOpenPar array_exp TkClosePar
Rule 14    op_array -> TkSize TkOpenPar array_exp TkClosePar
Rule 15    op_array -> TkMin TkOpenPar array_exp TkClosePar
Rule 16    op_array -> TkMax TkOpenPar array_exp TkClosePar
Rule 17    array_exp -> TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
Rule 18    array_exp -> TkId TkOpenPar expression TkTwoPoints expression TkClosePar TkOBracket expression TkCBracket
Rule 19    array_exp -> TkId TkOpenPar expression TkTwoPoints expression TkClosePar
Rule 20    array_exp -> TkId TkOBracket expression TkCBracket
Rule 21    array_exp1 -> TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
Rule 22    array_exp1 -> TkOpenPar expression TkTwoPoints expression TkClosePar array_exp2
Rule 23    array_exp1 -> TkOpenPar expression TkTwoPoints expression TkClosePar
Rule 24    array_exp2 -> TkOBracket expression TkCBracket
Rule 25    type -> TkInt
Rule 26    type -> TkBool
Rule 27    type -> array
Rule 28    type -> TkInt TkComma type
Rule 29    type -> TkBool TkComma type
Rule 30    type -> array TkComma type
Rule 31    sequencing -> instruction TkSemicolon
Rule 32    sequencing -> instruction TkSemicolon sequencing
Rule 33    instruction -> assign_inst
Rule 34    instruction -> input_inst
Rule 35    instruction -> output_inst
Rule 36    instruction -> if_inst
Rule 37    instruction -> iteration_for_inst
Rule 38    instruction -> iteration_mult_guard_inst
Rule 39    instruction -> block
Rule 40    expression -> TkString
Rule 41    expression -> TkId
Rule 42    expression -> TkNum
Rule 43    expression -> TkTrue
Rule 44    expression -> TkFalse
Rule 45    expression -> op_array
Rule 46    expression -> array_exp
Rule 47    expression -> TkMinus expression
Rule 48    expression -> TkNot expression
Rule 49    expression -> TkOpenPar expression TkClosePar
Rule 50    expression -> expression TkConcat expression
Rule 51    expression -> expression TkPlus expression
Rule 52    expression -> expression TkMinus expression
Rule 53    expression -> expression TkMult expression
Rule 54    expression -> expression TkDiv expression
Rule 55    expression -> expression TkMod expression
Rule 56    expression -> expression TkAnd expression
Rule 57    expression -> expression TkOr expression
Rule 58    expression -> expression TkLess expression
Rule 59    expression -> expression TkLeq expression
Rule 60    expression -> expression TkGreater expression
Rule 61    expression -> expression TkGeq expression
Rule 62    expression -> expression TkEqual expression
Rule 63    expression -> expression TkNEqual expression
Rule 64    assign_inst -> TkId TkAsig expression assign1
Rule 65    assign_inst -> TkId TkAsig expression
Rule 66    assign1 -> TkComma expression assign1
Rule 67    assign1 -> TkComma expression
Rule 68    input_inst -> TkRead TkId
Rule 69    output_inst -> TkPrint expression
Rule 70    output_inst -> TkPrintln expression
Rule 71    if_inst -> TkIf expression TkArrow sequencing TkFi
Rule 72    if_inst -> TkIf expression TkArrow sequencing guards_inst TkFi
Rule 73    guards_inst -> TkGuard expression TkArrow sequencing
Rule 74    guards_inst -> TkGuard expression TkArrow sequencing guards_inst
Rule 75    iteration_for_inst -> TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
Rule 76    iteration_mult_guard_inst -> TkDo expression TkArrow sequencing TkOd
Rule 77    iteration_mult_guard_inst -> TkDo expression TkArrow sequencing guards_inst TkOd

Terminals, with rules where they appear

TkAnd                : 56
TkArray              : 8
TkArrow              : 71 72 73 74 75 76 77
TkAsig               : 64 65
TkAtoi               : 9 13
TkBool               : 26 29
TkCBlock             : 2 3
TkCBracket           : 8 18 20 24
TkClosePar           : 9 10 11 12 13 14 15 16 17 18 19 21 22 23 49
TkComma              : 6 28 29 30 66 67
TkComments           : 
TkConcat             : 50
TkDeclare            : 3
TkDiv                : 54
TkDo                 : 76 77
TkEqual              : 62
TkFalse              : 44
TkFi                 : 71 72
TkFor                : 75
TkGeq                : 61
TkGreater            : 60
TkGuard              : 73 74
TkId                 : 6 7 9 10 11 12 17 18 19 20 41 64 65 68 75
TkIf                 : 71 72
TkIn                 : 75
TkInt                : 25 28
TkLeq                : 59
TkLess               : 58
TkMax                : 12 16
TkMin                : 11 15
TkMinus              : 47 52
TkMod                : 55
TkMult               : 53
TkNEqual             : 63
TkNot                : 48
TkNum                : 42
TkOBlock             : 2 3
TkOBracket           : 8 18 20 24
TkOd                 : 76 77
TkOpenPar            : 9 10 11 12 13 14 15 16 17 18 19 21 22 23 49
TkOr                 : 57
TkPlus               : 51
TkPrint              : 69
TkPrintln            : 70
TkPunto              : 
TkRead               : 68
TkRof                : 75
TkSemicolon          : 4 31 32
TkSize               : 10 14
TkSoForth            : 8
TkString             : 40
TkTo                 : 75
TkTrue               : 43
TkTwoPoints          : 4 5 17 18 19 21 22 23
TkUminus             : 
error                : 

Nonterminals, with rules where they appear

array                : 27 30
array_exp            : 13 14 15 16 46
array_exp1           : 17 21
array_exp2           : 22
assign1              : 64 66
assign_inst          : 33
block                : 1 39 75
declare_var          : 3 4
expression           : 8 8 17 17 18 18 18 19 19 20 21 21 22 22 23 23 24 47 48 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 65 66 67 69 70 71 72 73 74 75 75 76 77
guards_inst          : 72 74 77
if_inst              : 36
input_inst           : 34
instruction          : 31 32
iteration_for_inst   : 37
iteration_mult_guard_inst : 38
op_array             : 45
output_inst          : 35
sequencing           : 2 3 32 71 72 73 74 76 77
start                : 0
type                 : 4 5 28 29 30
variables            : 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) block -> . TkOBlock sequencing TkCBlock
    (3) block -> . TkOBlock TkDeclare declare_var sequencing TkCBlock

    TkOBlock        shift and go to state 3

    start                          shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> block .

    $end            reduce using rule 1 (start -> block .)


state 3

    (2) block -> TkOBlock . sequencing TkCBlock
    (3) block -> TkOBlock . TkDeclare declare_var sequencing TkCBlock
    (31) sequencing -> . instruction TkSemicolon
    (32) sequencing -> . instruction TkSemicolon sequencing
    (33) instruction -> . assign_inst
    (34) instruction -> . input_inst
    (35) instruction -> . output_inst
    (36) instruction -> . if_inst
    (37) instruction -> . iteration_for_inst
    (38) instruction -> . iteration_mult_guard_inst
    (39) instruction -> . block
    (64) assign_inst -> . TkId TkAsig expression assign1
    (65) assign_inst -> . TkId TkAsig expression
    (68) input_inst -> . TkRead TkId
    (69) output_inst -> . TkPrint expression
    (70) output_inst -> . TkPrintln expression
    (71) if_inst -> . TkIf expression TkArrow sequencing TkFi
    (72) if_inst -> . TkIf expression TkArrow sequencing guards_inst TkFi
    (75) iteration_for_inst -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
    (76) iteration_mult_guard_inst -> . TkDo expression TkArrow sequencing TkOd
    (77) iteration_mult_guard_inst -> . TkDo expression TkArrow sequencing guards_inst TkOd
    (2) block -> . TkOBlock sequencing TkCBlock
    (3) block -> . TkOBlock TkDeclare declare_var sequencing TkCBlock

    TkDeclare       shift and go to state 5
    TkId            shift and go to state 14
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 16
    TkPrintln       shift and go to state 17
    TkIf            shift and go to state 18
    TkFor           shift and go to state 19
    TkDo            shift and go to state 20
    TkOBlock        shift and go to state 3

    sequencing                     shift and go to state 4
    instruction                    shift and go to state 6
    assign_inst                    shift and go to state 7
    input_inst                     shift and go to state 8
    output_inst                    shift and go to state 9
    if_inst                        shift and go to state 10
    iteration_for_inst             shift and go to state 11
    iteration_mult_guard_inst      shift and go to state 12
    block                          shift and go to state 13

state 4

    (2) block -> TkOBlock sequencing . TkCBlock

    TkCBlock        shift and go to state 21


state 5

    (3) block -> TkOBlock TkDeclare . declare_var sequencing TkCBlock
    (4) declare_var -> . variables TkTwoPoints type TkSemicolon declare_var
    (5) declare_var -> . variables TkTwoPoints type
    (6) variables -> . TkId TkComma variables
    (7) variables -> . TkId

    TkId            shift and go to state 24

    declare_var                    shift and go to state 22
    variables                      shift and go to state 23

state 6

    (31) sequencing -> instruction . TkSemicolon
    (32) sequencing -> instruction . TkSemicolon sequencing

    TkSemicolon     shift and go to state 25


state 7

    (33) instruction -> assign_inst .

    TkSemicolon     reduce using rule 33 (instruction -> assign_inst .)


state 8

    (34) instruction -> input_inst .

    TkSemicolon     reduce using rule 34 (instruction -> input_inst .)


state 9

    (35) instruction -> output_inst .

    TkSemicolon     reduce using rule 35 (instruction -> output_inst .)


state 10

    (36) instruction -> if_inst .

    TkSemicolon     reduce using rule 36 (instruction -> if_inst .)


state 11

    (37) instruction -> iteration_for_inst .

    TkSemicolon     reduce using rule 37 (instruction -> iteration_for_inst .)


state 12

    (38) instruction -> iteration_mult_guard_inst .

    TkSemicolon     reduce using rule 38 (instruction -> iteration_mult_guard_inst .)


state 13

    (39) instruction -> block .

    TkSemicolon     reduce using rule 39 (instruction -> block .)


state 14

    (64) assign_inst -> TkId . TkAsig expression assign1
    (65) assign_inst -> TkId . TkAsig expression

    TkAsig          shift and go to state 26


state 15

    (68) input_inst -> TkRead . TkId

    TkId            shift and go to state 27


state 16

    (69) output_inst -> TkPrint . expression
    (40) expression -> . TkString
    (41) expression -> . TkId
    (42) expression -> . TkNum
    (43) expression -> . TkTrue
    (44) expression -> . TkFalse
    (45) expression -> . op_array
    (46) expression -> . array_exp
    (47) expression -> . TkMinus expression
    (48) expression -> . TkNot expression
    (49) expression -> . TkOpenPar expression TkClosePar
    (50) expression -> . expression TkConcat expression
    (51) expression -> . expression TkPlus expression
    (52) expression -> . expression TkMinus expression
    (53) expression -> . expression TkMult expression
    (54) expression -> . expression TkDiv expression
    (55) expression -> . expression TkMod expression
    (56) expression -> . expression TkAnd expression
    (57) expression -> . expression TkOr expression
    (58) expression -> . expression TkLess expression
    (59) expression -> . expression TkLeq expression
    (60) expression -> . expression TkGreater expression
    (61) expression -> . expression TkGeq expression
    (62) expression -> . expression TkEqual expression
    (63) expression -> . expression TkNEqual expression
    (9) op_array -> . TkAtoi TkOpenPar TkId TkClosePar
    (10) op_array -> . TkSize TkOpenPar TkId TkClosePar
    (11) op_array -> . TkMin TkOpenPar TkId TkClosePar
    (12) op_array -> . TkMax TkOpenPar TkId TkClosePar
    (13) op_array -> . TkAtoi TkOpenPar array_exp TkClosePar
    (14) op_array -> . TkSize TkOpenPar array_exp TkClosePar
    (15) op_array -> . TkMin TkOpenPar array_exp TkClosePar
    (16) op_array -> . TkMax TkOpenPar array_exp TkClosePar
    (17) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar TkOBracket expression TkCBracket
    (19) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar
    (20) array_exp -> . TkId TkOBracket expression TkCBracket

    TkString        shift and go to state 29
    TkId            shift and go to state 30
    TkNum           shift and go to state 31
    TkTrue          shift and go to state 32
    TkFalse         shift and go to state 33
    TkMinus         shift and go to state 36
    TkNot           shift and go to state 37
    TkOpenPar       shift and go to state 38
    TkAtoi          shift and go to state 39
    TkSize          shift and go to state 40
    TkMin           shift and go to state 41
    TkMax           shift and go to state 42

    expression                     shift and go to state 28
    op_array                       shift and go to state 34
    array_exp                      shift and go to state 35

state 17

    (70) output_inst -> TkPrintln . expression
    (40) expression -> . TkString
    (41) expression -> . TkId
    (42) expression -> . TkNum
    (43) expression -> . TkTrue
    (44) expression -> . TkFalse
    (45) expression -> . op_array
    (46) expression -> . array_exp
    (47) expression -> . TkMinus expression
    (48) expression -> . TkNot expression
    (49) expression -> . TkOpenPar expression TkClosePar
    (50) expression -> . expression TkConcat expression
    (51) expression -> . expression TkPlus expression
    (52) expression -> . expression TkMinus expression
    (53) expression -> . expression TkMult expression
    (54) expression -> . expression TkDiv expression
    (55) expression -> . expression TkMod expression
    (56) expression -> . expression TkAnd expression
    (57) expression -> . expression TkOr expression
    (58) expression -> . expression TkLess expression
    (59) expression -> . expression TkLeq expression
    (60) expression -> . expression TkGreater expression
    (61) expression -> . expression TkGeq expression
    (62) expression -> . expression TkEqual expression
    (63) expression -> . expression TkNEqual expression
    (9) op_array -> . TkAtoi TkOpenPar TkId TkClosePar
    (10) op_array -> . TkSize TkOpenPar TkId TkClosePar
    (11) op_array -> . TkMin TkOpenPar TkId TkClosePar
    (12) op_array -> . TkMax TkOpenPar TkId TkClosePar
    (13) op_array -> . TkAtoi TkOpenPar array_exp TkClosePar
    (14) op_array -> . TkSize TkOpenPar array_exp TkClosePar
    (15) op_array -> . TkMin TkOpenPar array_exp TkClosePar
    (16) op_array -> . TkMax TkOpenPar array_exp TkClosePar
    (17) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar TkOBracket expression TkCBracket
    (19) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar
    (20) array_exp -> . TkId TkOBracket expression TkCBracket

    TkString        shift and go to state 29
    TkId            shift and go to state 30
    TkNum           shift and go to state 31
    TkTrue          shift and go to state 32
    TkFalse         shift and go to state 33
    TkMinus         shift and go to state 36
    TkNot           shift and go to state 37
    TkOpenPar       shift and go to state 38
    TkAtoi          shift and go to state 39
    TkSize          shift and go to state 40
    TkMin           shift and go to state 41
    TkMax           shift and go to state 42

    expression                     shift and go to state 43
    op_array                       shift and go to state 34
    array_exp                      shift and go to state 35

state 18

    (71) if_inst -> TkIf . expression TkArrow sequencing TkFi
    (72) if_inst -> TkIf . expression TkArrow sequencing guards_inst TkFi
    (40) expression -> . TkString
    (41) expression -> . TkId
    (42) expression -> . TkNum
    (43) expression -> . TkTrue
    (44) expression -> . TkFalse
    (45) expression -> . op_array
    (46) expression -> . array_exp
    (47) expression -> . TkMinus expression
    (48) expression -> . TkNot expression
    (49) expression -> . TkOpenPar expression TkClosePar
    (50) expression -> . expression TkConcat expression
    (51) expression -> . expression TkPlus expression
    (52) expression -> . expression TkMinus expression
    (53) expression -> . expression TkMult expression
    (54) expression -> . expression TkDiv expression
    (55) expression -> . expression TkMod expression
    (56) expression -> . expression TkAnd expression
    (57) expression -> . expression TkOr expression
    (58) expression -> . expression TkLess expression
    (59) expression -> . expression TkLeq expression
    (60) expression -> . expression TkGreater expression
    (61) expression -> . expression TkGeq expression
    (62) expression -> . expression TkEqual expression
    (63) expression -> . expression TkNEqual expression
    (9) op_array -> . TkAtoi TkOpenPar TkId TkClosePar
    (10) op_array -> . TkSize TkOpenPar TkId TkClosePar
    (11) op_array -> . TkMin TkOpenPar TkId TkClosePar
    (12) op_array -> . TkMax TkOpenPar TkId TkClosePar
    (13) op_array -> . TkAtoi TkOpenPar array_exp TkClosePar
    (14) op_array -> . TkSize TkOpenPar array_exp TkClosePar
    (15) op_array -> . TkMin TkOpenPar array_exp TkClosePar
    (16) op_array -> . TkMax TkOpenPar array_exp TkClosePar
    (17) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar TkOBracket expression TkCBracket
    (19) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar
    (20) array_exp -> . TkId TkOBracket expression TkCBracket

    TkString        shift and go to state 29
    TkId            shift and go to state 30
    TkNum           shift and go to state 31
    TkTrue          shift and go to state 32
    TkFalse         shift and go to state 33
    TkMinus         shift and go to state 36
    TkNot           shift and go to state 37
    TkOpenPar       shift and go to state 38
    TkAtoi          shift and go to state 39
    TkSize          shift and go to state 40
    TkMin           shift and go to state 41
    TkMax           shift and go to state 42

    expression                     shift and go to state 44
    op_array                       shift and go to state 34
    array_exp                      shift and go to state 35

state 19

    (75) iteration_for_inst -> TkFor . TkId TkIn expression TkTo expression TkArrow block TkRof

    TkId            shift and go to state 45


state 20

    (76) iteration_mult_guard_inst -> TkDo . expression TkArrow sequencing TkOd
    (77) iteration_mult_guard_inst -> TkDo . expression TkArrow sequencing guards_inst TkOd
    (40) expression -> . TkString
    (41) expression -> . TkId
    (42) expression -> . TkNum
    (43) expression -> . TkTrue
    (44) expression -> . TkFalse
    (45) expression -> . op_array
    (46) expression -> . array_exp
    (47) expression -> . TkMinus expression
    (48) expression -> . TkNot expression
    (49) expression -> . TkOpenPar expression TkClosePar
    (50) expression -> . expression TkConcat expression
    (51) expression -> . expression TkPlus expression
    (52) expression -> . expression TkMinus expression
    (53) expression -> . expression TkMult expression
    (54) expression -> . expression TkDiv expression
    (55) expression -> . expression TkMod expression
    (56) expression -> . expression TkAnd expression
    (57) expression -> . expression TkOr expression
    (58) expression -> . expression TkLess expression
    (59) expression -> . expression TkLeq expression
    (60) expression -> . expression TkGreater expression
    (61) expression -> . expression TkGeq expression
    (62) expression -> . expression TkEqual expression
    (63) expression -> . expression TkNEqual expression
    (9) op_array -> . TkAtoi TkOpenPar TkId TkClosePar
    (10) op_array -> . TkSize TkOpenPar TkId TkClosePar
    (11) op_array -> . TkMin TkOpenPar TkId TkClosePar
    (12) op_array -> . TkMax TkOpenPar TkId TkClosePar
    (13) op_array -> . TkAtoi TkOpenPar array_exp TkClosePar
    (14) op_array -> . TkSize TkOpenPar array_exp TkClosePar
    (15) op_array -> . TkMin TkOpenPar array_exp TkClosePar
    (16) op_array -> . TkMax TkOpenPar array_exp TkClosePar
    (17) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar TkOBracket expression TkCBracket
    (19) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar
    (20) array_exp -> . TkId TkOBracket expression TkCBracket

    TkString        shift and go to state 29
    TkId            shift and go to state 30
    TkNum           shift and go to state 31
    TkTrue          shift and go to state 32
    TkFalse         shift and go to state 33
    TkMinus         shift and go to state 36
    TkNot           shift and go to state 37
    TkOpenPar       shift and go to state 38
    TkAtoi          shift and go to state 39
    TkSize          shift and go to state 40
    TkMin           shift and go to state 41
    TkMax           shift and go to state 42

    expression                     shift and go to state 46
    op_array                       shift and go to state 34
    array_exp                      shift and go to state 35

state 21

    (2) block -> TkOBlock sequencing TkCBlock .

    $end            reduce using rule 2 (block -> TkOBlock sequencing TkCBlock .)
    TkSemicolon     reduce using rule 2 (block -> TkOBlock sequencing TkCBlock .)
    TkRof           reduce using rule 2 (block -> TkOBlock sequencing TkCBlock .)


state 22

    (3) block -> TkOBlock TkDeclare declare_var . sequencing TkCBlock
    (31) sequencing -> . instruction TkSemicolon
    (32) sequencing -> . instruction TkSemicolon sequencing
    (33) instruction -> . assign_inst
    (34) instruction -> . input_inst
    (35) instruction -> . output_inst
    (36) instruction -> . if_inst
    (37) instruction -> . iteration_for_inst
    (38) instruction -> . iteration_mult_guard_inst
    (39) instruction -> . block
    (64) assign_inst -> . TkId TkAsig expression assign1
    (65) assign_inst -> . TkId TkAsig expression
    (68) input_inst -> . TkRead TkId
    (69) output_inst -> . TkPrint expression
    (70) output_inst -> . TkPrintln expression
    (71) if_inst -> . TkIf expression TkArrow sequencing TkFi
    (72) if_inst -> . TkIf expression TkArrow sequencing guards_inst TkFi
    (75) iteration_for_inst -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
    (76) iteration_mult_guard_inst -> . TkDo expression TkArrow sequencing TkOd
    (77) iteration_mult_guard_inst -> . TkDo expression TkArrow sequencing guards_inst TkOd
    (2) block -> . TkOBlock sequencing TkCBlock
    (3) block -> . TkOBlock TkDeclare declare_var sequencing TkCBlock

    TkId            shift and go to state 14
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 16
    TkPrintln       shift and go to state 17
    TkIf            shift and go to state 18
    TkFor           shift and go to state 19
    TkDo            shift and go to state 20
    TkOBlock        shift and go to state 3

    sequencing                     shift and go to state 47
    instruction                    shift and go to state 6
    assign_inst                    shift and go to state 7
    input_inst                     shift and go to state 8
    output_inst                    shift and go to state 9
    if_inst                        shift and go to state 10
    iteration_for_inst             shift and go to state 11
    iteration_mult_guard_inst      shift and go to state 12
    block                          shift and go to state 13

state 23

    (4) declare_var -> variables . TkTwoPoints type TkSemicolon declare_var
    (5) declare_var -> variables . TkTwoPoints type

    TkTwoPoints     shift and go to state 48


state 24

    (6) variables -> TkId . TkComma variables
    (7) variables -> TkId .

    TkComma         shift and go to state 49
    TkTwoPoints     reduce using rule 7 (variables -> TkId .)


state 25

    (31) sequencing -> instruction TkSemicolon .
    (32) sequencing -> instruction TkSemicolon . sequencing
    (31) sequencing -> . instruction TkSemicolon
    (32) sequencing -> . instruction TkSemicolon sequencing
    (33) instruction -> . assign_inst
    (34) instruction -> . input_inst
    (35) instruction -> . output_inst
    (36) instruction -> . if_inst
    (37) instruction -> . iteration_for_inst
    (38) instruction -> . iteration_mult_guard_inst
    (39) instruction -> . block
    (64) assign_inst -> . TkId TkAsig expression assign1
    (65) assign_inst -> . TkId TkAsig expression
    (68) input_inst -> . TkRead TkId
    (69) output_inst -> . TkPrint expression
    (70) output_inst -> . TkPrintln expression
    (71) if_inst -> . TkIf expression TkArrow sequencing TkFi
    (72) if_inst -> . TkIf expression TkArrow sequencing guards_inst TkFi
    (75) iteration_for_inst -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
    (76) iteration_mult_guard_inst -> . TkDo expression TkArrow sequencing TkOd
    (77) iteration_mult_guard_inst -> . TkDo expression TkArrow sequencing guards_inst TkOd
    (2) block -> . TkOBlock sequencing TkCBlock
    (3) block -> . TkOBlock TkDeclare declare_var sequencing TkCBlock

    TkCBlock        reduce using rule 31 (sequencing -> instruction TkSemicolon .)
    TkFi            reduce using rule 31 (sequencing -> instruction TkSemicolon .)
    TkGuard         reduce using rule 31 (sequencing -> instruction TkSemicolon .)
    TkOd            reduce using rule 31 (sequencing -> instruction TkSemicolon .)
    TkId            shift and go to state 14
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 16
    TkPrintln       shift and go to state 17
    TkIf            shift and go to state 18
    TkFor           shift and go to state 19
    TkDo            shift and go to state 20
    TkOBlock        shift and go to state 3

    instruction                    shift and go to state 6
    sequencing                     shift and go to state 50
    assign_inst                    shift and go to state 7
    input_inst                     shift and go to state 8
    output_inst                    shift and go to state 9
    if_inst                        shift and go to state 10
    iteration_for_inst             shift and go to state 11
    iteration_mult_guard_inst      shift and go to state 12
    block                          shift and go to state 13

state 26

    (64) assign_inst -> TkId TkAsig . expression assign1
    (65) assign_inst -> TkId TkAsig . expression
    (40) expression -> . TkString
    (41) expression -> . TkId
    (42) expression -> . TkNum
    (43) expression -> . TkTrue
    (44) expression -> . TkFalse
    (45) expression -> . op_array
    (46) expression -> . array_exp
    (47) expression -> . TkMinus expression
    (48) expression -> . TkNot expression
    (49) expression -> . TkOpenPar expression TkClosePar
    (50) expression -> . expression TkConcat expression
    (51) expression -> . expression TkPlus expression
    (52) expression -> . expression TkMinus expression
    (53) expression -> . expression TkMult expression
    (54) expression -> . expression TkDiv expression
    (55) expression -> . expression TkMod expression
    (56) expression -> . expression TkAnd expression
    (57) expression -> . expression TkOr expression
    (58) expression -> . expression TkLess expression
    (59) expression -> . expression TkLeq expression
    (60) expression -> . expression TkGreater expression
    (61) expression -> . expression TkGeq expression
    (62) expression -> . expression TkEqual expression
    (63) expression -> . expression TkNEqual expression
    (9) op_array -> . TkAtoi TkOpenPar TkId TkClosePar
    (10) op_array -> . TkSize TkOpenPar TkId TkClosePar
    (11) op_array -> . TkMin TkOpenPar TkId TkClosePar
    (12) op_array -> . TkMax TkOpenPar TkId TkClosePar
    (13) op_array -> . TkAtoi TkOpenPar array_exp TkClosePar
    (14) op_array -> . TkSize TkOpenPar array_exp TkClosePar
    (15) op_array -> . TkMin TkOpenPar array_exp TkClosePar
    (16) op_array -> . TkMax TkOpenPar array_exp TkClosePar
    (17) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar TkOBracket expression TkCBracket
    (19) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar
    (20) array_exp -> . TkId TkOBracket expression TkCBracket

    TkString        shift and go to state 29
    TkId            shift and go to state 30
    TkNum           shift and go to state 31
    TkTrue          shift and go to state 32
    TkFalse         shift and go to state 33
    TkMinus         shift and go to state 36
    TkNot           shift and go to state 37
    TkOpenPar       shift and go to state 38
    TkAtoi          shift and go to state 39
    TkSize          shift and go to state 40
    TkMin           shift and go to state 41
    TkMax           shift and go to state 42

    expression                     shift and go to state 51
    op_array                       shift and go to state 34
    array_exp                      shift and go to state 35

state 27

    (68) input_inst -> TkRead TkId .

    TkSemicolon     reduce using rule 68 (input_inst -> TkRead TkId .)


state 28

    (69) output_inst -> TkPrint expression .
    (50) expression -> expression . TkConcat expression
    (51) expression -> expression . TkPlus expression
    (52) expression -> expression . TkMinus expression
    (53) expression -> expression . TkMult expression
    (54) expression -> expression . TkDiv expression
    (55) expression -> expression . TkMod expression
    (56) expression -> expression . TkAnd expression
    (57) expression -> expression . TkOr expression
    (58) expression -> expression . TkLess expression
    (59) expression -> expression . TkLeq expression
    (60) expression -> expression . TkGreater expression
    (61) expression -> expression . TkGeq expression
    (62) expression -> expression . TkEqual expression
    (63) expression -> expression . TkNEqual expression

    TkSemicolon     reduce using rule 69 (output_inst -> TkPrint expression .)
    TkConcat        shift and go to state 52
    TkPlus          shift and go to state 53
    TkMinus         shift and go to state 54
    TkMult          shift and go to state 55
    TkDiv           shift and go to state 56
    TkMod           shift and go to state 57
    TkAnd           shift and go to state 58
    TkOr            shift and go to state 59
    TkLess          shift and go to state 60
    TkLeq           shift and go to state 61
    TkGreater       shift and go to state 62
    TkGeq           shift and go to state 63
    TkEqual         shift and go to state 64
    TkNEqual        shift and go to state 65


state 29

    (40) expression -> TkString .

    TkConcat        reduce using rule 40 (expression -> TkString .)
    TkPlus          reduce using rule 40 (expression -> TkString .)
    TkMinus         reduce using rule 40 (expression -> TkString .)
    TkMult          reduce using rule 40 (expression -> TkString .)
    TkDiv           reduce using rule 40 (expression -> TkString .)
    TkMod           reduce using rule 40 (expression -> TkString .)
    TkAnd           reduce using rule 40 (expression -> TkString .)
    TkOr            reduce using rule 40 (expression -> TkString .)
    TkLess          reduce using rule 40 (expression -> TkString .)
    TkLeq           reduce using rule 40 (expression -> TkString .)
    TkGreater       reduce using rule 40 (expression -> TkString .)
    TkGeq           reduce using rule 40 (expression -> TkString .)
    TkEqual         reduce using rule 40 (expression -> TkString .)
    TkNEqual        reduce using rule 40 (expression -> TkString .)
    TkSemicolon     reduce using rule 40 (expression -> TkString .)
    TkArrow         reduce using rule 40 (expression -> TkString .)
    TkComma         reduce using rule 40 (expression -> TkString .)
    TkClosePar      reduce using rule 40 (expression -> TkString .)
    TkTwoPoints     reduce using rule 40 (expression -> TkString .)
    TkCBracket      reduce using rule 40 (expression -> TkString .)
    TkTo            reduce using rule 40 (expression -> TkString .)
    TkSoForth       reduce using rule 40 (expression -> TkString .)


state 30

    (41) expression -> TkId .
    (17) array_exp -> TkId . TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> TkId . TkOpenPar expression TkTwoPoints expression TkClosePar TkOBracket expression TkCBracket
    (19) array_exp -> TkId . TkOpenPar expression TkTwoPoints expression TkClosePar
    (20) array_exp -> TkId . TkOBracket expression TkCBracket
